[gd_scene load_steps=9 format=3 uid="uid://4b4mmwa32sie"]

[ext_resource type="Script" uid="uid://jdjqruo83xlr" path="res://scenes/field_manager.gd" id="1_tcubs"]
[ext_resource type="Script" uid="uid://px7xb1bjoqkh" path="res://scenes/player.gd" id="2_vjqoj"]
[ext_resource type="Script" uid="uid://8tg5mortoi1k" path="res://scenes/deck.gd" id="3_aaam2"]
[ext_resource type="Texture2D" uid="uid://ck1g1m2ju2bih" path="res://assets/deck/deck.png" id="4_5qjf2"]
[ext_resource type="Script" uid="uid://cobcnvc24l4v0" path="res://scenes/deck_area.gd" id="5_mwwu5"]
[ext_resource type="Script" uid="uid://comg03vyrhtko" path="res://card_hand.gd" id="6_kxpcs"]
[ext_resource type="PackedScene" uid="uid://dajdunb2sry23" path="res://scenes/card_slot.tscn" id="7_35llp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6rnap"]
size = Vector2(99, 139)

[node name="Field" type="Node2D"]
script = ExtResource("1_tcubs")

[node name="Player" type="Node2D" parent="."]
script = ExtResource("2_vjqoj")

[node name="Deck" type="Node2D" parent="."]
z_index = -2
position = Vector2(1207, 637)
script = ExtResource("3_aaam2")

[node name="DeckTexture" type="TextureRect" parent="Deck"]
offset_left = -43.000023
offset_top = -70.0
offset_right = 123.6666
offset_bottom = 159.99994
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_5qjf2")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CardCount" type="Label" parent="Deck/DeckTexture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -68.5
offset_right = 49.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DeckArea2d" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4
script = ExtResource("5_mwwu5")

[node name="DeckCollision" type="CollisionShape2D" parent="Deck/DeckArea2d"]
position = Vector2(7.5, -0.5)
shape = SubResource("RectangleShape2D_6rnap")

[node name="Hand" type="Node2D" parent="."]
script = ExtResource("6_kxpcs")

[node name="Slots" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 372.0
offset_top = 261.0
offset_right = 922.0
offset_bottom = 477.0
metadata/_edit_use_anchors_ = true

[node name="CardSlot" parent="Slots" instance=ExtResource("7_35llp")]
position = Vector2(206, 101)
scale = Vector2(0.8, 0.8)

[node name="CardSlot3" parent="Slots" instance=ExtResource("7_35llp")]
position = Vector2(334, 101)
scale = Vector2(0.8, 0.8)

[node name="CardSlot4" parent="Slots" instance=ExtResource("7_35llp")]
position = Vector2(464, 101)
scale = Vector2(0.8, 0.8)

[node name="CardSlot2" parent="Slots" instance=ExtResource("7_35llp")]
position = Vector2(80, 101)
scale = Vector2(0.8, 0.8)
